2023-01-10
+  MINOR
   + Incremented Cache version

2023-01-10
+  MINOR
   + Updated the item sets to include the items and NPCs added in patch 6.3
   + Updated Assembly packages and .Net Framework to 4.8
+ BUGFIX
   + Outdoor Furnishings now list correctly
   + Fatcat Loungewear now listed correctly
   + Maplist datalength updated (Fixes Cache error)

2022-08-24
+  MINOR
   + Updated the item sets to include the items and NPCs added in patch 6.2
   + Added the ability to load basic modpacks in the wizard modpack creator when creating options
+ BUGFIX
   - Fixed an issue where dialog windows would get stuck behind other windows in the wizard modpack creator

2022-07-31
+  MINOR
   + Updated and expanded Chinese translations (Thanks Esrin!)
   + Added Korean translations (Thanks ModernTiger!)
   + Added buttons to rename and reorder mod group options in the wizard modpack creator
+ BUGFIX
   - Fixed a mislabelled slot abbreviation (Thanks Kaya!)
   - Fixed status names under UI -> Status for the international client

2022-05-15
+  MINOR
   + Updated Offsets for KR and CN Versions.
   + Updated CN Discord Link.

2022-04-18
+ MINOR
	- Offsets updated for FFXIV Version 6.1 (Fixes issues with Housing items & mounts)
	- Lumina functionality renamed to Penumbra at goat's request.
+ BUGFIX
	- Fixed an issue where exported FBX files would not correctly have their textures assigned in the output file.

2022-02-17
+ BUGFIX
    - Reverted model scaling changes from 2.3.7.5 - Changes were not fully vetted and contained significant bugs.

2022-02-16
+ BUGFIX
    - Auto-Skin selector now properly retains modpack link between modified models and the modpacks that imported them (for enable/disable purposes) ( Thanks Tani! )
    - Custom model import size dialog now correctly included in release build.

2022-02-15
+ MINOR
    - Updated auto-material assignment to assign Bibo+ mods onto _bibo materials (if they exist).
    - Back-end work in preparation for Overlay Modpacks
